[metadata]
name = maskedtensor
version = 0.0.1
author = Christian Puhrsch
author_email = cpuhrsch@fb.com
description = MaskedTensors for PyTorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpuhrsch/maskedtensor
project_urls =
    Bug Tracker = https://github.com/cpuhrsch/maskedtensor/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = maskedtensor
packages = find:
python_requires = >=3.6

[options.packages.find]
where = maskedtensor
